<resources>
    <string name="app_name">Medihealth</string>
    <string name="hello_jeny">Hello, Jeny</string>
    <string name="let_s_check">Lets check your schedule today!</string>
    <string name="welcome">Welcome</string>
    <string name="email">Masukkan Email</string>
    <string name="pass">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="baru">Pengguna Baru?</string>
    <string name="signup">Sign Up</string>
    <string name="register_to">Register to Medihealth</string>
    <string name="passwarn">Use at least 8 numbers and letters without any space</string>
    <string name="tanggal">Tanggal Lahir</string>
    <string name="jenis_kelam">Jenis Kelamin</string>
    <string name="laki">Laki - laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="terms">I have read and agrees to abide Healthcheck Term and Condition and Privacy Policy</string>
    <string name="regis">Sign Up</string>
    <string name="nama">Masukkan Nama</string>
    <string name="hello_profil_fragment">Profile</string>
    <string name="hello_reservasi_fragment">Reservasi</string>
    <string name="medihealth_">Medihealth Hospital</string>
    <string name="first_par">
        Pellentesque pretium ultricies lobortis. Sed suscipit congue nibh, nec ornare dui hendrerit ut. Phasellus nibh erat, tristique vel mollis quis, lobortis non.
    </string>
    <string name="second_par">
        Vivamus sit amet magna sed lectus consequat mattis eget non neque. Fusce varius, ipsum in aliquam fringilla, massa felis lobortis dui,
    </string>
    <string name="third_par">
        Pellentesque at orci vitae massa tristique faucibus. Aenean a fermentum ligula, feugiat elementum velit. Morbi fringilla turpis in tristique sagittis. Donec feugiat, libero vel gravida sodales, metus ipsum suscipit est, sit amet rhoncus dui magna sed orci. Duis hendrerit eget lacus sit amet varius. Donec semper fermentum velit, non dapibus est.
    </string>
    <string name="reservasi">Reservasi</string>
    <string name="data_pasien">Data Pasien</string>
    <string name="umur_21">Umur : 21</string>
    <string name="tanggal_res">Tanggal Reservasi</string>
    <string name="pilih_cara_">Pilih Cara Bayar</string>
    <string name="poli">Poli</string>
    <string name="dokter">Dokter</string>
    <string name="scan_qr_cod">Scan QR Code</string>
    <string name="place_qr_co">Place qr code inside the frame to scan please\navoid shake to get result quickly</string>

    <string-array name="nama_dokter">
        <item>Dr. John Smith</item>
        <item>Dr. Samantha Grey</item>
        <item>Dr. Anne</item>
        <item>Dr. Sarah</item>
    </string-array>

    <string-array name="spesialis_dokter">
        <item>Spesialis Penyakit Dalam</item>
        <item>Spesialis Anak</item>
        <item>Spesialis Saraf</item>
        <item>Spesialis Kandungan</item>
    </string-array>

    <string-array name="jam_dokter">
        <item>09.30 AM - 11.30 AM</item>
        <item>08.30 AM - 10.00 AM</item>
        <item>13.00 AM - 14.30 AM</item>
        <item>14.30 AM - 15.20 AM</item>
    </string-array>


</resources>