<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedihealthAppActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/medihealth"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/medihealth_"
        android:textAppearance="@style/medihealth_"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/first_par"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/first_par"
        android:textAppearance="@style/first_par"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:clipToOutline="true"
        android:gravity="center"
        android:src="@drawable/menu" />

    <TextView
        android:id="@+id/second_par"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/second_par"
        android:textAppearance="@style/second_par"
        android:gravity="top"/>

    <TextView
        android:id="@+id/third_par"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/third_par"
        android:textAppearance="@style/third_par"
        android:gravity="top"
        />



</LinearLayout>