<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detail Reservasi"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/scan_qr_cod"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/scan_qr_cod"
                android:textAppearance="@style/scan_qr_cod"
                android:gravity="center_horizontal|top"
                />

            <TextView
                android:id="@+id/place_qr_co"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/place_qr_co"
                android:textAppearance="@style/place_qr_co"
                android:gravity="center_horizontal|top"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qr_code"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tanggal_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/tanggal_res"
                android:textAppearance="@style/tanggal_res"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/tv_reservasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tanggal Reservasi"
                android:textColor="@color/hitam"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="42px" />

            <TextView
                android:id="@+id/poliRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/poli"
                android:textAppearance="@style/poli"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/tv_poli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Poli"
                android:textColor="@color/hitam"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="42px" />

            <TextView
                android:id="@+id/dokterRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/dokter"
                android:textAppearance="@style/dokter"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/tv_dokter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Dokter"
                android:textColor="@color/hitam"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="42px" />






        </LinearLayout>
    </ScrollView>

</LinearLayout>