<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Form Reservasi"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/bg_gradient"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="0dp">


            <TextView
                android:id="@+id/poli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:text="@string/poli"
                android:textAppearance="@style/poli"
                android:gravity="top"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/etPoli"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_weight="8"
                android:background="@drawable/bg_form"
                android:hint="Poli"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dokter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/dokter"
                android:textAppearance="@style/dokter"
                android:gravity="top"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/etDokter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_weight="8"
                android:background="@drawable/bg_form"
                android:hint="Dokter"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pilih_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="Pilih Cara Bayar"
                android:textAppearance="@style/pilih_cara_"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rgAsuransi"
                android:layout_below="@+id/textView6">

                <RadioButton
                    android:id="@+id/byrUmum"
                    android:layout_width="98dp"
                    android:layout_height="37dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="280dp"
                    android:text="UMUM"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/byrJkn"
                    android:layout_width="76dp"
                    android:layout_height="33dp"
                    android:layout_below="@+id/checkBox"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="267dp"
                    android:text="JKN"
                    android:textColor="@color/white" />

            </RadioGroup>

            <TextView
                android:id="@+id/tanggal_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/tanggal_res"
                android:textAppearance="@style/tanggal_res"
                android:gravity="top"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/tgl_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:text="pilih tanggal"/>

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Submit"
                android:textColor="#fff"
                android:background="@drawable/button"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
